# jobi

./: .env.example  .gitignore  ANALYZA_TISKU_DOKUMENTU.md  AUDIT_APLIKACE.md  CHAT_AUDIT_COMPLETE.md  CUSTOMER_HISTORY_IMPLEMENTATION.md  DIAGNOSTIKA_ACTIVE_SERVICE_ID.md  DIRTY_TRACKING_ANALYZA.md  EDGE_FUNCTION_DEBUG_FAKTA.md  EDIT_TICKET_CUSTOMER_AUDIT.md  FUNCTIONS_TRACKER.md  JOBSHEET_CONTEXT.md  JOBSHEET_TODO.md  KOMPLETNI_AUDIT_APLIKACE.md  MASTER_BACKLOG_A_OTAZKY.md  MASTER_BACKLOG_ODPOVEDI.md  MENTALNI_MODEL_DOKUMENTY.md  MIGRACE_ANALYZA_20250102_20250103.md  ORDERS_CUSTOMERS_AUDIT.md  PREFILL_PHONE_EDIT_ANALYZA.md  PREFILL_PHONE_MATCHING_MAP.md  PREVIEW_SAVE_ANALYZA.md  PRINT_LAYOUT_DOCUMENTATION.md  README.md  REALTIME_UPDATE_ANALYZA.md  RESTORE_CHECKLIST.md  STATUSY_AUDIT_VYSLEDKY.md  VERIFIKACE_IMPLEMENTACE.md  WEBSOCKET_DIAGNOSTIKA.md  audit_results.md  audit_tickets_statuses.md  code_analysis.md  debug_checklist.md  eslint.config.js  index.html  latest.json  local_tickets_missing_fields.md  notarize-log.txt  package-lock.json  package.json  (+2 more)
Domca/: index.html
capture/: capture.js  index.html
docs/: AUDIT_AUTH_DB_CONNECTIONS.md  AUDIT_LOGIN_REGISTRACE_ZVANI.md  AUDIT_OWNER_ADMIN_MEMBER.md  CHYBY_V0.1.0.md  DOMENA_PRO_RESEND_CHATGPT.md  FAKTURY_SETUP.md  INSTALACE_KLIENTUM.md  INSTALL_TEST.md  INVITE_EMAIL_RESEND.md  JOBIDOCS_OTA_A_RELEASE.md  JOBIDOCS_STORAGE_BUCKET.md  MIGRATIONS_SAFETY.md  OTA_SETUP_KROKY.md  OTA_UPDATES.md  PRUVODCE_NAVRHY.md  (+18 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
(+391 files in other folders)
